0.1.0
  - Web app has its own repository now: mqwebapp

0.0.13
  - Upgrade documents to use latest Jekyll release
  - Use unsigned char for ebcdic code. Fix #13
  - This release is the last one with static/templates.
    New webapp will be developed in separate repository mqwebapp.
  - Empty connection id must be initialized #12

0.0.12
  - Add inquire topic
  - Add inquire topicstatus (tpstatus)
  - Add inquire subscription (sub)
  - Add inquire subscription status (sbstatus)
  - Add suspend cluster qmgr
  - Add resume cluster qmgr
  - First steps in adding websocket for browsing messages
  - Add inquire channel initiator (chinit)
  - Start support for CMake

0.0.11
  - Add inquire connection (conn)
  - Add inquire namelist (nl)
  - Add inquire process (process)
  - Add inquire service (service)
  - Add inquire authentication information (authinfo)
  - Add inquire authority record (authrec)
  - Support for JSONP
  - Allow to run without mq.web.templates / mq.web.static configuration
  - Add connection pooling

0.0.10
  - queueExcludeSystem/queueExcludeTemp renamed into excludeSystem/excludeTemp
  - channelExcludeSystem renamed into excludeSystem
  - All MQ attributes (dictionary) are now stored in a SQLite database
  - Add inquire clusterqmgr (clusqmgr)
  - Wrong default channel SYSTEM.DEFAULT.SVRCONN
  - Add mq.web.defaultChannel configuration property
  - api/chstatus: instanceType can also be used when channelname is passed as
    URI parameter
  - Enhancement #6: Add support for connecting with SSL channels
  - Solve #5: MQRC_TRUNCATED for PCF messages from z/OS
  - Solve #7: MQRC_Q_MGR_NAME_ERROR received due to wrong URI in web pages

0.0.9
  - Limit browse of messages to 16K
  - To ease installation, switched to statically linked POCO
  - DEFINE SERVICE(MQWEB) is now possible using the new --qmgr and --port
    command line arguments.
  - KnockOut is replaced by AngularJS
  - Add inquire listener
  - Add inquire listener status